--- a/autozram.service
+++ b/autozram.service
@@ -6,6 +6,13 @@
 # config for mounts: /etc/autozram/drives.conf
 # uses specific format
 # status directory (RuntimeDirectory): /run/autozram/
+#
+# warning:
+# unsafe config parser
+# 
+# todo:
+# create appropriate and safe config parser for init.conf and drives.conf
+# maybe fuse both confs into one
 
 [Unit]
 Description=Automatically creates and mounts compressed in memory drives (zram)
