--- a/etc/autozram/drives.conf
+++ b/etc/autozram/drives.conf
@@ -1,8 +1,16 @@
 # provides name(usage) filesystem, size, max_mem_size and/or max_mem_pool_share (), mount_point
-# if no size limits give, drive will use leftovers
-declare -A tmpdir=(
- [size]=2000000
- [max_mem_size]=1000000
- [max_pool_share]=20
- [fs]=btrfs "/tmp"
- )
+# if no size limits are given, drive will consume all leftovers (?)
+# future save format will change to following ini structure:
+# [tmpdir]
+# size=2000000
+# max_mem_size=1000000
+# max_pool_share=20
+# fs=btrfs
+# mount="/tmp"
+#
+# right now we need one line, where 0 for max memory usage means unlimited.
+# following are examples with both limits, only max mem, only max pool:
+# tmpdir 2000000 1000000 20 btrfs mount="/tmp"
+# tmpdir 2000000 0 20 btrfs mount="/tmp"
+# tmpdir 0 1000000 20 btrfs mount="/tmp"
+tmpdir 2000000 1000000 20 btrfs mount="/tmp"
