rewind to simple form

--- a/etc/autozram/drives.conf
+++ b/etc/autozram/drives.conf
@@ -13,4 +13,4 @@
 # tmpdir 2000000 1000000 20 btrfs mount="/tmp"
 # tmpdir 2000000 0 20 btrfs mount="/tmp"
 # tmpdir 0 1000000 20 btrfs mount="/tmp"
-tmpdir 2000000 1000000 20 btrfs mount="/tmp"
+# default: none
