--- a/etc/autozram.conf
+++ b/etc/autozram.conf
@@ -8,8 +8,18 @@ mem_reserved:2000
 # from 0 for none to 100 for max possible, 100 is reccomended
 mem_pool_share:100
 
-# swap memory limits config: swap_mem_max, swap_pool_share
-# only one is needed to enable zram swap
-# if both are specified script chooses highest plausible memory usage (check README)
-swap_max_mem:4000    # fixed amount in MB
-swap_pool_share:100  # % of calculated available pool
+# provides mount_point, filesystem, size and max_mem_size (optional) in kb
+
+drive:swap
+size:8000000  # 
+max_mem:4000000
+max_pool_share:90
+init:swap
+
+drive:tmp
+mount:"/tmp"
+fs:btrfs
+size:2000000
+max_mem:1000000
+max_pool_share:10
+init:mount
