--- a/etc/autozram.conf
+++ b/etc/autozram.conf
@@ -8,18 +8,29 @@ mem_reserved:2000
 # from 0 for none to 100 for max possible, 100 is reccomended
 mem_pool_share:100
 
-# provides mount_point, filesystem, size and max_mem_size (optional) in kb
 
+# example configuration for a swap drive:
 drive:swap
-size:8000000  # 
+size:8000000
 max_mem:4000000
 max_pool_share:90
 init:swap
 
-drive:tmp
-mount:"/tmp"
-fs:btrfs
-size:2000000
-max_mem:1000000
-max_pool_share:10
-init:mount
+# example for a tmp folder:
+# provide mount_point, filesystem, size and max_mem_size (optional) in kb
+# drive:tmp
+# mount:"/tmp"
+# fs:btrfs
+# size:2000000
+# max_mem:1000000
+# max_pool_share:10
+# init:mount
+
+# example for disabled drive config:
+# drive:tmp
+# mount:"/tmp"
+# fs:btrfs
+# size:2000000
+# max_mem:1000000
+# max_pool_share:10
+# init:none
