move to single directory, fix spec file

--- a/autozram.conf
+++ b/autozram.conf
@@ -8,6 +8,14 @@ mem_reserved:2000
 # from 0 for none to 100 for max possible, 100 is reccomended
 mem_pool_share:100
 
+# drive configuration
+# drive: <any name for your drive, human readability reccomended> 
+# mount: "<existing mount point, ignored for swap>"
+# fs: <mkfs supported filesystem>
+# size: <disksize in kb>
+# max_mem: <memory usage limit in kb>
+# max_pool_share: <memory pool share limit in %>
+# init: <initialise as: mount (mount point), swap (swap drive), none (do not initialise/disable)>
 
 # example configuration for a swap drive:
 drive:swap
