--- a/zramservice/zramservice.conf
+++ b/zramservice/zramservice.conf
@@ -9,13 +9,18 @@ mem_reserved:2000
 mem_pool_share:100
 
 # drive configuration
-# drive: <any name for your drive, human readability reccomended> 
-# mount: "<existing mount point, ignored for swap>"
+# improtant: init is required for all drives, mount point for all besides swap
+# zramservice will not create the mount points
+# drive: <any name>
+# mount: "<existing mount point>"
 # fs: <mkfs supported filesystem>
 # size: <disksize in kb>
 # max_mem: <memory usage limit in kb>
 # max_pool_share: <memory pool share limit in %>
-# init: <initialise as: mount (mount point), swap (swap drive), none (do not initialise/disable)>
+# init: <initialise as>
+#          mount (mount point),
+#          swap (swap drive),
+#          none (do not initialise/disable and reset config)
 
 # example configuration for a swap drive:
 drive:swap
