--- a/zramservice.conf
+++ b/zramservice.conf
@@ -1,22 +1,21 @@
-# memory reserved for system
-# 2G is OK even for systems with less.
-# in systems bellow 2 * reserved_mem the script will take 50% of total available ram.
+# memory reserved for system.
+# available memory pool for zram drives is "mem available - mem reserved"
+# in systems bellow 2 * reserved_mem the script will take 75% of total available ram.
 # Enter in MB, no mem suffixes!
-mem_reserved:2000
-
-# define memory pool in % from non-reserved to limit RAM usage of zram drives
-# from 0 for none to 100 for max possible, 100 is reccomended
-mem_pool_share:100
+mem_reserved:500
 
 # drive configuration
-# improtant: init is required for all drives, mount point for all besides swap
+# init is required for all drives, mount point for all besides swap
 # zramservice will not create the mount points
 # drive: <any name>
 # mount: "<existing mount point>"
 # fs: <mkfs supported filesystem>
-# size: <disksize in kb>
-# max_mem: <memory usage limit in kb>
-# max_pool_share: <memory pool share limit in %>
+# size: <disksize in MB>
+# max_mem: <memory usage limit in MB>
+# max_pool_share: <share of available memory_pool in %>
+#   if both options are provided the bigger memory usage will be preffered.
+#   max_mem:0, max_pool_share:0 and max_pool_share:100 will have same effect
+#   drive memory usage will be limited to pool value
 # init: <initialise as>
 #          mount (mount point),
 #          swap (swap drive),
@@ -24,18 +23,18 @@ mem_pool_share:100
 
 # example configuration for a swap drive:
 drive:swap
-size:8000000
-max_mem:4000000
-max_pool_share:90
+# size:2000
+# max_mem:1000
+max_pool_share:100
 init:swap
 
 # example for a tmp folder:
 # provide mount_point, filesystem, size and max_mem_size (optional) in kb
 # drive:tmp
-# mount:"/tmp"
+# mount:/tmp
 # fs:btrfs
-# size:2000000
-# max_mem:1000000
+# size:2000
+# max_mem:500
 # max_pool_share:10
 # init:mount
 
@@ -47,3 +46,16 @@ init:swap
 # max_mem:1000000
 # max_pool_share:10
 # init:none
+
+# example for multiple folders:
+# provide mount_point, filesystem, size and max_mem_size (optional) in kb
+# drive:user_cache
+# fs:btrfs
+# size:1000
+# max_mem:500
+# mount:/tmp/user1
+# init:mount
+# mount:/tmp/user2
+# init:mount
+# mount:/tmp/user3
+# init:mount
