--- a/zramservice.conf
+++ b/zramservice.conf
@@ -1,8 +1,14 @@
+# stable memory pool configuration
+# default value=1 calculates memory pool depending on other swap
+# if set to zero, script relies solely on mem_reserved
+# change only if you know what you do
+# stable_pool=1
+
 # memory reserved for system.
 # available memory pool for zram drives is "mem available - mem reserved"
 # in systems bellow 2 * reserved_mem the script will take 75% of total available ram.
 # Enter in MB, no mem suffixes!
-mem_reserved:500
+mem_reserved:1000
 
 # drive configuration
 # init is required for all drives, mount point for all besides swap
@@ -40,7 +46,7 @@ init:swap
 
 # example for disabled drive config:
 # drive:tmp
-# mount:"/tmp"
+# mount:/tmp
 # fs:btrfs
 # size:2000000
 # max_mem:1000000
